k8s/old/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: ticketer
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: ticketer
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: ticketer
spec:
  selector:
    app: ticket-service
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ticketer
spec:
  selector:
    app: payment-service
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-booking
  namespace: ticketer
spec:
  selector:
    app: postgres-booking
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-ticket
  namespace: ticketer
spec:
  selector:
    app: postgres-ticket
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  namespace: ticketer
spec:
  selector:
    app: gateway-api
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
